--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -90,7 +90,7 @@ jobs:
           java-version: 11
 
       - name: Load .scons_cache directory
-        uses: actions/cache@v2
+        uses: actions/cache@3
         with:
           path: ${{github.workspace}}/.scons_cache/
           key: ${{matrix.opts.cache-name}}-${{env.BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
@@ -119,7 +119,7 @@ jobs:
         run: |
           scons platform=android ${{ matrix.opts.build-options }} ${{ env.SCONSFLAGS }}
       
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: ${{matrix.opts.artifact-name}}
           path: scripts/godot/platform/android/java/lib/libs/*
